# beatport-bot

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
beatport_bot/: BeatportBot.py  ConfigManager.py  beatport_csv.py
