[metadata]
# replace with your username:
name = example-pkg-drlim2u
author = David Lim
description = A web scraper to scrape the names of record labels and details of their releases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drlim2u/beatport-bot
project_urls =
    Bug Tracker = https://github.com/drlim2u/beatport-bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Mozilla Public License Version 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = beatport_bot
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src